os/tenants/pythonapp/pythonapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pythonapp
  name: pythonapp
  namespace: pythonapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pythonapp
status:
  loadBalancer: {}
