os/tenants/pythonapp/pythonapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pythonapp
    app.kubernetes.io/instance: pythonapp
  name: pythonapp
  namespace: pythonapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pythonapp
    weight: 100
status: {}
